--- a/frontend/src/components/Card/Item/styles.css
+++ b/frontend/src/components/Card/Item/styles.css
@@ -1,8 +1,20 @@
 .card-item {
-    margin-bottom: 10px;
+    margin: 5px 0;
 }
 
 .card-name {
     margin: 0;
     padding: 5px;
+
+    width: calc(100% - 40px);
+
+    overflow: auto;
+}
+
+.card-wrapper {
+    display: flex;
+
+    width: 100%;
+
+    justify-content: space-between;
 }
