--- a/frontend/src/components/Player/Item/styles.css
+++ b/frontend/src/components/Player/Item/styles.css
@@ -7,9 +7,13 @@
 
     overflow: hidden;
 
+    max-height: calc(100% - 10px);
+
     border: 1px solid gray;
     border-radius: 5px;
     margin-bottom: 10px;
+
+    background-color:lightsteelblue;
 }
 
 .player-item:not(:last-of-type) {
@@ -29,6 +33,9 @@
     justify-content: space-between;
 
     border-bottom: 1px solid gray;
+
+    background-color: #230745;
+    color: #fff;
 }
 
 .player-item-row {
@@ -39,6 +46,14 @@
     height: calc(100% - 100px);
 
     overflow: auto;
+
+    background-color: aliceblue;
+}
+
+.cards-form-wrapper {
+    border-top: 1px solid gray;
+
+    color: #fff;
 }
 
 @media screen and (orientation:portrait) {
