--- a/frontend/src/features/Cards/Components/Item/styles.css
+++ b/frontend/src/features/Cards/Components/Item/styles.css
@@ -2,6 +2,19 @@
     box-sizing: border-box;
 
     margin-bottom: 5px;
+
+    border-radius: 3px;
+
+    background-color: #fff;
+
+    box-shadow: 
+        0 1px 3px 0 rgba(0,0,0,0.2),
+        0 1px 1px 0 rgba(0,0,0,0.14),
+        0 2px 1px -1px rgba(0,0,0,0.12);
+}
+
+.card-item.isDragging {
+    background-color: lightblue;
 }
 
 .card-name {
