UI: added higliting of droppable element

--- a/frontend/src/features/Players/Components/Item/styles.css
+++ b/frontend/src/features/Players/Components/Item/styles.css
@@ -16,6 +16,10 @@
     background-color: lightsteelblue;
 }
 
+.player-item.is-dragging-over .cards-list {
+    background-color: lightgreen;
+}
+
 .player-item:not(:last-of-type) {
     margin-right: 10px;
 }
